<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    android:layout_weight="10"
    android:id="@+id/main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/app_name"
        android:textColor="#ffffff"
        android:textSize="28sp" />


    <Button
        android:id="@+id/introButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introBtn" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/dollar" />
    </LinearLayout>

    <Button
        android:id="@+id/overviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:paddingBottom="10dp"
        android:text="@string/overview" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="#ffffff"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:textSize="16sp"
        android:text="@string/introduction"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="64dp" />

</LinearLayout>